syntax = "proto3";

option csharp_namespace = "Distance.Service.Protos";

package DistanceService;

service DistanceService {
  rpc GetDistanceInfoList (GetDistanceInfoListRequest) returns (GetDistanceInfoListReply);
}

message GetDistanceInfoListRequest {
  string country = 1;
  int32 pageIndex = 2;
  int32 pageSize = 3;
}

message GetDistanceInfoListReply {
  repeated GetDistanceInfoDetail distanceInfoList = 1;
  int64 totalItems = 2;
}

message GetDistanceInfoDetail {
  int64 userId = 1;
  double latitude  = 2;
  double longitude  = 3;
  string country  = 4;
}